# aardvark-lemon-virtue

./: .env.example  ALV_Database_Schema_Documentation.md  README.md  Untitled.ipynb  dockerfile  merged_requirements.txt  pyproject.toml  requirements.txt  requirements2.txt  sonar-project.properties
.sonarlint/: connectedMode.json
jupyter-eda/: Connecting to ALV Databse.ipynb  LangChain Platform.ipynb  Prototyping Linkedin Request.ipynb
langchain/: dotenv Check.ipynb
langchain/.chroma/: chroma.sqlite3
query-linkedin-schema/: add-comments-to-QUERY_LINKEDIN-schema.json  base_objects.sql  changelog-master.json  changelog-master.sql  liquibase.properties  rename-job-id-column.json  schema_dump.snowflake.sql  update-table-pk-uuid.json
soccer-schema/: LangChain Platform.md  Understanding LangChain.ipynb  langchain_snowflake.ipynb
