[tool.poetry]
name = "aardvark-lemon-virtue"
version = "0.1.0"
description = ""
authors = ["louspringer <lou@louspringer.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gitpython = "^3.1.43"
jinja2 = "^3.1.4"
markdown = "^3.7"
pyjwt = "^2.9.0"
pyqt5 = "^5.15.11"
pysocks = "^1.7.1"
pyyaml = "^6.0.2"
pygments = "^2.18.0"
sqlalchemy = "^2.0.35"
scrapy = "^2.11.2"
sphinx = "^8.1.0"
altair = "^5.4.1"
black = "^24.10.0"
bokeh = "^3.6.0"
cryptography = "^43.0.1"
dask = "^2024.9.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
pydantic = "^2.9.2"
pytest = "^8.3.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
seaborn = "^0.13.2"
streamlit = "^1.39.0"
xarray = "^2024.9.0"
jupyter = "^1.1.1"
python-jenkins = "^1.8.2"
langchain-chroma = "^0.1.4"
langchain-openai = "^0.2.2"
langgraph = "^0.2.35"
langchain = "^0.3.3"
langchainhub = "^0.1.21"
langchain-community = "^0.3.2"
tiktoken = "^0.8.0"
python-dotenv = "^1.0.1"
notebook = "^7.2.2"


[tool.poetry.group.dev.dependencies]
pipx = "^1.7.1"
pip-tools = "^7.4.1"
pip = "^24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
